--- a/Server/ServerSide.csproj
+++ b/Server/ServerSide.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonLibrary\CommonLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ProtocolLibrary">
       <HintPath>..\..\ChatPrototype\ProtocolLibrary\bin\Debug\net8.0\ProtocolLibrary.dll</HintPath>
     </Reference>
