dev.1.18. realization of ICommand(RelayCommand) and INotifyPropertyChanged(ObservableObject)

--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
