--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <Folder Include="MVVM\ViewModels\" />
   </ItemGroup>
 
 </Project>
