dev.1.54. Window's Icon is added

--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -9,10 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\logo.png" />
     <None Remove="Images\logo.svg" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Images\logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\logo.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
