--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -28,4 +28,17 @@
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLibrary\CommonLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="ProtocolLibrary">
+      <HintPath>..\..\ChatPrototype\ProtocolLibrary\bin\Debug\net8.0\ProtocolLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="SocketEventLibrary">
+      <HintPath>..\..\EventSocket\EventSocket\bin\Debug\net8.0\SocketEventLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
