temp.7.5. values for ColumnStyles are removed from EntryWindows.config

--- a/Chat/ResourcesDictionaries/Configs/EntryWindows.config
+++ b/Chat/ResourcesDictionaries/Configs/EntryWindows.config
@@ -2,19 +2,9 @@
 <configuration>
 	<appSettings>
 		
-		<!--View parameters-->
+		<!--Views parameters-->
 		<add key="ContentWidth" value="500"/>
 		<add key="LogotypeHeight" value="100"/>
-		
-		<!--Side column's style parameters-->
-		<add key="SideColumnHorizontalScreenValue" value="0,375"/>
-		<add key="SideColumnSquareScreenValue" value="0,325"/>
-		<add key="SideColumnVerticalScreenValue" value="0,3"/>
-		
-		<!--Main column's style parameters-->
-		<add key="MainColumnHorizontalScreenValue" value="0,25"/>
-		<add key="MainColumnSquareScreenValue" value="0,35"/>
-		<add key="MainColumnVerticalScreenValue" value="0,4"/>
 		
 	</appSettings>
 </configuration>
