--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Emoji.Wpf" Version="0.3.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
     <PackageReference Include="SharpVectors" Version="1.8.4" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
